--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ margin-right: 10px;
 }
 #text_generate{
   padding: 10px 50px;
-  padding: 10px 50px;
   display: block;
   margin: 0 auto;
   margin-top: 15px;
+  border-radius: 30px;
   }
   .download-button {
     display: inline-block;
