--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ margin-right: 10px;
   }
   .download-button {
     /* display: inline-block; */
-    display: none;
+    /* display: none; */
     padding: 10px 20px;
     background-image: linear-gradient( 135deg, #0f9 0%, #60f 100%);
     color: #fff;
@@ -47,7 +47,7 @@ margin-right: 10px;
     text-decoration: none;
     border-radius: 30px;
     border: none;
-    /* display: block; */
+    display: block;
     margin: 15px auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease, transform 0.6s ease;
